simplify response